# strem

./: Cargo.toml  README.md
docs/: mkdocs.yml
docs/src/about/: contact.md  contributors.md  papers.md
docs/src/reference/: schema.md  spre.md
docs/src/started/: examples.md  installation.md
src/: config.rs  controller.rs  datastream.rs  matcher.rs  monitor.rs  symbolizer.rs
src/compiler/: ir.rs  lexer.rs  parser.rs
src/compiler/ir/: ast.rs  ops.rs
src/compiler/lexer/: token.rs
src/datastream/: frame.rs  io.rs
src/datastream/frame/sample/: detections.rs
src/datastream/frame/sample/detections/: bbox.rs
src/datastream/frame/sample/detections/bbox/: region.rs
src/datastream/frame/sample/detections/bbox/region/: aa.rs  oriented.rs
src/datastream/io/: exporter.rs  importer.rs
src/monitor/: s4.rs  s4m.rs  s4u.rs
src/symbolizer/: ast.rs
