[package]
name = "strem"
version = "0.1.1"
authors = ["Jacob Anderson <andersonjwan@gmail.com>"]
edition = "2021"
description = "A tool for spatial and temporal pattern matching over perception streams."
readme = "README.md"
homepage = "https://strem-org.github.io/strem/"
repository = "https://github.com/strem-org/strem"
license = "BSD-3-Clause"
keywords = ["regex", "monitoring", "spatial", "temporal", "perception"]
exclude = [
    ".gitignore",
    "docs/*",
]

[dependencies]
clap = { version = "4.5.11", features = ["cargo"] }
colored = "2.1.0"
itertools = "0.13.0"
regex-automata = "0.4.7"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"

[dev-dependencies]
criterion = "0.5.1"
